Added Visual Floppy to see floppy disk (+3, CPC, PCW, Betadisk) activity
Added Poke F-Function
Added Visual Real Tape F-Function
Added Settings F-Function
Added DSK disk info menu: to get tracks and sectors of a disk
Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name
Added XEyes "Toy" to follow mouse
Added more Hotswap combinations

* Improvements:

Improved Configuration:
- better parsing: warning when ZEsarUX has been downgraded
- if unknown parameter on configuration file, warn the user but start anyway
- moved showing Configuration file from Running info menu to Settings-> Configuration file

Improved File selector: 
- Can show recent folders (press space on recent files)

Improved DSK viewer:
- better filesystem detection
- show hidden and read only files
- show disk specification format
- show where files are located on Visual Floppy

Improved DSK extractor:
- better filesystem detection

Improved Debug Console: better refresh, dynamic width??
Improved Debug Messages: allow to filter by message class (DSK, PD765, etc...)
Improved Debug I/O ports window: autoresize content height when do not fit in window

Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added (nn) when selecting an opcode like: ld reg,(nn) and ld (nn),reg
- added (ix+d), (iy+d) when selecting an opcode like: ld reg,(IX+d), etc
- added continuos speed 4 (run 10 opcodes every time, with no pause)
- show last memory pointer when changing it
- show B register on satisfy condition for DJNZ
- added new functions OPMRV(e), OPMWV(e), OPMRA(e), OPMWA(e): these return 1 if the last opcode has set any of these variables to e.
- allow holding keys for quick cursor move, etc 

Improved View Sprites: 
- sprite is no longer disabled when changing memory pointer
- you can view sprites up to 1024x1024
- show PCW common format screen
