@@ -9428,7 +9428,12 @@ void menu_hardware_set_f_functions(MENU_ITEM_PARAMETERS)
             menu_add_item_menu_valor_opcion(array_menu_hardware_set_f_functions,i);
 
 
-            if (defined_direct_functions_array[indice_tabla].id_funcion==F_FUNCION_OPEN_WINDOW) {
+            if (
+                defined_direct_functions_array[indice_tabla].id_funcion==F_FUNCION_OPEN_WINDOW ||
+                defined_direct_functions_array[indice_tabla].id_funcion==F_FUNCION_DESKTOP_SNAPSHOT ||
+                defined_direct_functions_array[indice_tabla].id_funcion==F_FUNCION_DESKTOP_TAPE ||
+                defined_direct_functions_array[indice_tabla].id_funcion==F_FUNCION_DESKTOP_GENERIC_SMARTLOAD 
+            ) {
                 char string_extra_info[16];
                 menu_tape_settings_trunc_name(defined_f_functions_keys_array_extra_info[i],string_extra_info,16);
 
