@@ -14,6 +14,7 @@ Added Settings F-Function
 Added DSK disk info menu: to get tracks and sectors of a disk
 Added ZRCP command: "close-all-menus"
 Added icon/F-key to open any window identified by its name
+Allow F-keys to assign extra info for actions (like window name on openwindow action, or snapshot name on linktosnapshot action)
 Added XEyes "Toy" to follow mouse
 Added more Hotswap combinations
 
